node_decode2.txt
[eval]:1
const fs=require('fs'); const vm=require('vm'); const code=fs.readFileSync('C:\\Users\\Radriar\\.local\\share\\opencode\\tool-output\\tool_db0ccce480015pgxZvLmgx8LRy','utf8'); const ctx={document:{},window:{},console,setTimeout,clearTimeout,URL,fetch:()=>{},WebSocket:class{},XMLHttpRequest:class{},alert:()=>{},confirm:()=>true,navigator:{},history:{},localStorage:{getItem:()=>null,setItem:()=>{}},sessionStorage:{getItem:()=>null,setItem:()=>{}},location:{href:''}}; ctx.window=ctx; ctx.$=()=>({on:()=>{},css:()=>{},html:()=>{},prop:()=>{},addClass:()=>{},removeClass:()=>{},val:()=>{},text:()=>{},append:()=>{},prepend:()=>{},find:()=>ctx.,children:()=>[],parent:()=>ctx.,offset:()=>({top:0,left:0}),width:()=>0,height:()=>0,show:()=>{},hide:()=>{},fadeIn:()=>{},fadeOut:()=>{},attr:()=>'',removeAttr:()=>{},hasClass:()=>false}); ctx.layui={use:()=>{},form:{on:()=>{},render:()=>{},val:()=>{}},layer:{open:()=>{},close:()=>{},msg:()=>{},confirm:()=>{},load:()=>{},full:()=>{},style:()=>{}},util:{},jquery:ctx.$,i18n:{loadProperties:()=>{}},i18np:{prop:()=>''}}; vm.createContext(ctx); try{vm.runInContext(code,ctx,{timeout:10000});}catch(e){console.log('Runtime error (expected):',e.message.substring(0,200));} console.log('_0x4dcb type:',typeof ctx._0x4dcb); if(typeof ctx._0x4dcb==='function'){const idx=[0xc9,0xcc,0x1fe,0x4b7,0x196,0x5d0,0x3e1,0x64e,0xf1,0x142,0x615,0x432,0x363,0x512,0x500,0x5a0,0x378,0x680,0x48a,0x340,0x3c7,0x4e5,0x406,0x508,0xa5,0xde,0x396,0x22b,0x5d5,0x3a3,0x266,0x596,0x156,0x543,0x268,0x204,0x5aa,0x14e,0x5e6,0x172,0x126,0x5e2,0x2a4,0x1da,0x310,0x43e,0x6c6,0x574,0x531,0x347,0x4a5,0xfe,0x3f8,0x238,0x383,0x499,0x563,0x2e5,0x3b0,0xd7,0x37a,0x16c,0x4f7,0x42b,0x1cf,0x4eb,0xfa,0x3c8,0x458,0x3ec,0xaa,0x2d2,0x6e5,0x2ad,0x622,0xbe,0x485,0x41e,0x5ce,0x473,0x549,0x477,0x2bb,0x236,0x13d,0x675,0x6db,0x5d8,0x1cd,0x57f,0x2d3,0x322,0x2cb,0x374,0x68d,0x3fd,0x14d,0x4a4,0x62b,0x2df,0x552,0x1cc,0x3da,0x28a,0x1b2,0x2c5,0x682,0xf3,0xf2,0x5b6,0xdb,0x1af,0x200,0xbe,0x5ce,0x473,0x142,0x196,0xc9,0x1fe,0x485,0x41e,0x549,0x41e,0x615,0x432,0x363,0x512,0x500,0x355,0xd3,0x680,0x48a,0x340,0x3c7,0x306,0x52a,0x4e5,0x406,0x508,0xa5,0x4e4,0x396,0x156,0x69b,0x3a3,0x22b,0x5d5,0x178,0x699,0x543,0x268,0x204,0x5aa,0x14e,0x5e6,0x172,0x126,0x5e2,0x499,0x563,0x1da,0x596,0x310,0x43e,0x6c6,0x574,0x2a4,0x347,0x4a5,0x531,0x387,0xfe,0x513,0x1e1,0x3f8,0x383,0x3b0,0xd7,0x37a,0x16c,0x541,0x4f7,0x42b,0x1cf,0x4eb,0xfa,0x3c8,0x458,0x3ec,0xaa,0x2d2,0x6e5,0x2ad,0xc9,0x637,0x5d4,0x41f,0x6cb,0x6b1,0x159,0x28c,0x554,0x5c0,0x295,0x424,0x352,0x130,0x592,0x61f,0x4f6,0x40b,0x63f]; for(const i of idx){try{console.log('0x'+i.toString(16)+' ('+i+'): '+ctx._0x4dcb(i));}catch(e){console.log('0x'+i.toString(16)+' ('+i+'): ERROR - '+e.message);}} } else { console.log('No _0x4dcb'); console.log('Keys starting with _0:', Object.keys(ctx).filter(k=>k.startsWith('_0')).slice(0,20)); }
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   ^
Expected ident

SyntaxError: Unexpected token ','
    at makeContextifyScript (node:internal/vm:185:14)
    at compileScript (node:internal/process/execution:383:10)
    at evalTypeScript (node:internal/process/execution:256:22)
    at node:internal/main/eval_string:74:3

Node.js v22.18.0
